// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ordered list Default renders correctly 1`] = `
<ol
  class="ecl-ordered-list"
>
  <li
    class="ecl-ordered-list__item"
  >
    Jobs, growth and investment
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        European Semester
      </li>
    </ol>
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Digital single market
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Energy union and climate
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Security, solidarity and trust
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        A fully-integrated internal energy market
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        Energy efficiency
      </li>
    </ol>
  </li>
</ol>
`;

exports[`Ordered list Default renders correctly with extra attributes 1`] = `
<ol
  class="ecl-ordered-list"
  data-test="data-test-value"
  data-test-1="data-test-value-1"
>
  <li
    class="ecl-ordered-list__item"
  >
    Jobs, growth and investment
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        European Semester
      </li>
    </ol>
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Digital single market
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Energy union and climate
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Security, solidarity and trust
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        A fully-integrated internal energy market
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        Energy efficiency
      </li>
    </ol>
  </li>
</ol>
`;

exports[`Ordered list Default renders correctly with extra class names 1`] = `
<ol
  class="ecl-ordered-list custom-class custom-class--test"
>
  <li
    class="ecl-ordered-list__item"
  >
    Jobs, growth and investment
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Investment Plan for Europe: the Juncker Plan
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        European Semester
      </li>
    </ol>
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Digital single market
  </li>
  <li
    class="ecl-ordered-list__item"
  >
    Energy union and climate
    <ol
      class="ecl-ordered-list"
    >
      <li
        class="ecl-ordered-list__item"
      >
        Security, solidarity and trust
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        A fully-integrated internal energy market
      </li>
      <li
        class="ecl-ordered-list__item"
      >
        Energy efficiency
      </li>
    </ol>
  </li>
</ol>
`;
